Add unconfirmedtx queries
